--- a/app/src/main/res/layout/games_available_item_card.xml
+++ b/app/src/main/res/layout/games_available_item_card.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     app:cardElevation="2dp"
     app:cardCornerRadius="4dp"
-    android:layout_margin="4dp">
+    android:layout_margin="4dp"
+    android:onClick="onGameCardClick">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold|italic"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginStart="10dp"/>
 
     </LinearLayout>
 
