--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,16 @@
         <item name="android:fontFamily">SANS_SERIF</item>
         <item name="android:textSize">14sp</item>
     </style>
+    <style name="liquor_input_style">
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:hint">"1234"</item>
+    </style>
+    <style name="liquor_label">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingBottom">5dp</item>
+    </style>
 
 </resources>
