update games available -christina nguyen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,12 +20,12 @@
         <item name="android:layout_width">60dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:hint">"1234"</item>
+<!--        <item name="android:hint">"1234"</item>-->
     </style>
     <style name="liquor_label">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingBottom">10dp</item>
     </style>
 
 </resources>
