--- a/app/src/main/res/layout/activity_specific_game.xml
+++ b/app/src/main/res/layout/activity_specific_game.xml
@@ -30,8 +30,9 @@
             android:id="@+id/game_description_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="2dp"
+            app:cardElevation="4dp"
             app:cardCornerRadius="4dp"
+            android:clipToPadding="false"
             android:layout_margin="4dp"
             app:layout_constraintTop_toBottomOf="@id/game_header"
             app:layout_constraintStart_toStartOf="parent">
@@ -92,8 +93,9 @@
             android:id="@+id/new_game_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="2dp"
+            app:cardElevation="4dp"
             app:cardCornerRadius="4dp"
+            android:clipToPadding="false"
             android:layout_margin="4dp"
             app:layout_constraintTop_toBottomOf="@+id/game_description_card"
             app:layout_constraintStart_toStartOf="parent">
