--- a/app/src/main/res/layout/activity_specific_game.xml
+++ b/app/src/main/res/layout/activity_specific_game.xml
@@ -251,6 +251,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:text="@string/calculate"
+                            android:onClick="calculateBACClick"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/hours" />
 
