--- a/app/src/main/res/layout/games_available_item_card.xml
+++ b/app/src/main/res/layout/games_available_item_card.xml
@@ -7,8 +7,7 @@
     android:layout_height="wrap_content"
     app:cardElevation="2dp"
     app:cardCornerRadius="4dp"
-    android:layout_margin="4dp"
-    android:onClick="onGameCardClick">
+    android:layout_margin="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
